--- a/style.css
+++ b/style.css
@@ -5,4 +5,12 @@ nav {
     background-color: #dddddd;
 
 }
+
+/*body  {
+    background-image: url("background.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  */
+  
   
