--- a/style.css
+++ b/style.css
@@ -1,27 +1,37 @@
 nav {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    background-color: #dddddd;
-
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  background-color: #dddddd;
 }
 
-/*body  {
+@media screen and (max-width: 800px) {
+  .leftcolumn, .rightcolumn {
+    width: 100%;
+    padding: 0;
+  }
+}
+
+body  {
     background-image: url("background.jpg");
     background-repeat: no-repeat;
     background-size: cover;
   }
-  */
-  
-  .column {
-    float: left;
-    width: 33.33%;
-  }
-  
-  /* Clear floats after the columns */
-  .row:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
-  
+
+
+.column {
+  float: left;
+  width: 33.33%;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+img {
+  padding-left: 40px;
+  width: 330px;
+  margin: 20px;
